--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h1>{{ product }}</h1>
             <p v-if="inventory">In Stock</p>
             <p v-else>Out of Stock</p>
+            <p v-if="onSale">On Sale</p>
           </div>
         </div>
       </div>
